--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,16 @@
                 <a href="{% if topic.link %}{{ topic.link }}{% else %}/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
             </h2>
             <p class="comment_info">
-                {% if current_user %}
-                    <a class="vote_up" href="/{{ topic.id }}">+</a>
+                {% set vote_up = current_user and current_user.daily_karma > 0 %}
+                {% set vote_up = vote_up and current_user.name not in topic.up_votes %}
+                {% set vote_up = vote_up and current_user != topic.author %}
+                {% if vote_up %}
+                    <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.id }}">+</a>
                 {% end %}
                 
-                {% if topic.points == 1 %}
-                    1 point
-                {% else %}
-                    {{ topic.points }} points
-                {% end %}
+                <span class="points">
+                    {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
+                </span>
                 
                 {% if topic.author %}
                     by <a href="/community/{{ topic.author.name }}">{{ topic.author.name }}</a>
