--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,19 @@
 <html>
 <head>
     {% block title %}
-        <title>webnodes</title>
+        <title>{{ current_site.title }}</title>
     {% end %}
     <link type="text/css" href="/static/style.css" rel="stylesheet">
     {% block style %}{% end %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/script.js"></script>
     {% block script %}{% end %}
 </head>
 
 <body>
     <div id="header">
         <div id="logo">
-            <a href="/">thrutched</a>
+            <a href="/">{{ current_site.title }}</a>
         </div>
         <div id="nav">
             <a href="/submit">submit</a>
