--- a/templates/users/topics.html
+++ b/templates/users/topics.html
@@ -24,7 +24,7 @@
                 {% end %}
                 
                 {% if topic.author %}
-                    by <a href="/community/{{ topic.author.name }}">{{ topic.author.name }}</a>
+                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
                 {% else %}
                     by anonymous
                 {% end %}
