--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -37,9 +37,9 @@
             <br>
             {{ user.karma }} karma
             <br>
-            {{ user.n_topics }} <a href="/community/{{ user.name }}/topics">topics</a>
+            {{ user.n_topics }} <a href="/users/{{ user.name }}/topics">topics</a>
             <br>
-            {{ user.n_comments }} <a href="/community/{{ user.name }}/comments">comments</a>
+            {{ user.n_comments }} <a href="/users/{{ user.name }}/comments">comments</a>
         </div>
         <div style="clear:both"></div>
     </div>
