--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
                 {% set vote_up = vote_up and current_user != topic.author %}
                 {% if vote_up %}
                     <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.id }}">+</a>
+                {% elif not current_user %}
+                    <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
                 {% end %}
                 
                 <span class="points">
@@ -20,7 +22,7 @@
                 </span>
                 
                 {% if topic.author %}
-                    by <a href="/community/{{ topic.author.name }}">{{ topic.author.name }}</a>
+                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
                 {% else %}
                     by anonymous
                 {% end %}
@@ -35,5 +37,9 @@
                 </a>
             </p>
         </div>
+    {% end %}
+    
+    {% if next_page %}
+        <a href="/?page={{ next_page }}">Next Page</a>
     {% end %}
 {% end %}
