--- a/templates/users/comments.html
+++ b/templates/users/comments.html
@@ -28,7 +28,7 @@
                     {% end %}
                     
                     {% if comment.author %}
-                        by <a href="/community/{{ comment.author.name }}">{{ comment.author.name }}</a>
+                        by <a href="/users/{{ comment.author.name }}">{{ comment.author.name }}</a>
                     {% else %}
                         by anonymous
                     {% end %}
