--- a/static/style.css
+++ b/static/style.css
@@ -29,9 +29,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 }
 
 h1 {
-    border-bottom: 1px solid #eeeeee;
     font-size: 1.8em;
-    padding-bottom: 6px;
     margin-bottom: 0.5em;
 }
 h2, h3 {
@@ -99,8 +97,7 @@ label { display: block; font-size: 0.8em; }
     border-top: 1px solid #EEE;
     padding: 2em 0;
 }
-.comment_info,
-.comment .info { color: #6d6c6c; }
+.comment_info { color: #6d6c6c; }
 .comment .gravatar {
     float: left;
     margin: 0 1em;
@@ -117,7 +114,6 @@ label { display: block; font-size: 0.8em; }
 
 
 .topic {
-    border: none;
     padding-bottom: 3.5em;
 }
 
