--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,8 @@
                     by anonymous
                 {% end %}
                 
-                {{ locale.format_date(topic.created) }},
+                {{ relative_date(topic.created) }}
+                &nbsp;|&nbsp;
                 <a href="/{{ topic.id }}">
                     {% if topic.n_comments == 1 %}
                         1 comment
