--- a/static/style.css
+++ b/static/style.css
@@ -28,10 +28,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
     text-decoration: none;
 }
 
-h1 {
-    font-size: 1.8em;
-    margin-bottom: 0.5em;
-}
+h1 { font-size: 1.8em; }
 h2, h3 {
     color: #202020;
 }
