--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -3,7 +3,7 @@
         {% if comment.author %}
             <img src="{{ comment.author.gravatar(60) }}" class="gravatar">
         {% else %}
-            <img src="http://a.vimeocdn.com/portraits/defaults/d.60.jpg" class="gravatar">
+            <img src="http://www.gravatar.com/avatar/0?d=mm&amp;s=60" class="gravatar">
         {% end %}
         
         <div class="body">
