--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    margin: 7em auto;
+    margin: 5em auto;
     width: 750px;
 }
 
@@ -35,8 +35,25 @@ h2, h3 {
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.2em; }
 
-label { display: block; font-size: 0.8em; }
+label { color: #6d6c6c; }
 
+input[type="text"],
+input[type="password"],
+textarea {
+    padding: 0.2em;
+    display: block;
+    margin-bottom: 5px;
+}
+
+
+#background {
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    left: 0px; 
+    top: 0px; 
+    z-index: -1;
+}
 
 #header {
     margin-bottom: 3.5em;
@@ -48,6 +65,7 @@ label { display: block; font-size: 0.8em; }
     border-radius: 7px;
     font-size: 6em;
     padding: 0.1em 0.6em;
+    line-height: 1;
     text-decoration: none;
     background-color: #41A3C2;
     color: white;
@@ -108,6 +126,7 @@ label { display: block; font-size: 0.8em; }
 .comment .comment {
     margin-left: 40px;
 }
+.comment .reply { display: block; }
 
 
 .topic {
