--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -12,7 +12,7 @@
 
 {% block style %}
     <style>
-
+        #username, #password { width: 200px; }
     </style>
 {% end %}
 
@@ -22,26 +22,24 @@
     {% if message == 'login_error' %}
         <div id="message" class="error">Incorrect username or password</div>
     {% elif message == 'vote' %}
-        <div id="message" class="success">Sign in to vote on stuff!</div>
+        <div id="message" class="success">Sign in to vote!</div>
     {% end %}
     
     <h1>Sign In</h1>
-    
+    <br>
     <form action="" method="post">
         {{ xsrf_form_html() }}
         <label for="username">Username</label>
         <input type="text" id="username" name="username" tabindex="1" value="{{ handler.get_argument('username', '') }}">
-        <br>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" tabindex="2" value="{{ handler.get_argument('password', '') }}">
-        <br>
-        <br>
         <p>
-            <a href="/password_reset">Forgot password</a> •  
+            <a href="/password_reset">Forgot password</a> 
+            &nbsp;|&nbsp;
             {% set next = handler.get_argument('next', None) %}
             <a href="/sign_up{% if next %}?next={{ url_escape(next) }}{% end %}">Create an account</a>
         </p>
-        <input class="button" type="submit" value="Sign In">
+        <input class="button" type="submit" value="Let me in!">
     </form>
 {% end %}
 
