--- a/templates/users/comments.html
+++ b/templates/users/comments.html
@@ -2,8 +2,8 @@
 
 
 {% block content %}
-    <h1>{{ user.name }}'s Comments</h1>
-    
+    <h1>{{ user.name.capitalize() }}'s Comments</h1>
+    <br>
     {% for comment in user.comments %}
         <div class="comment">
             <img src="{{ user.gravatar(50) }}" class="gravatar">
