--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,12 @@
     {% for topic in topics %}
         <div class="topic_listing">
             <h2>
-                <a href="{% if topic.link %}{{ topic.link }}{% else %}/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
+                {% if topic.link %}
+                    <a href="{{ topic.link }}">{{ escape(topic.title) }}</a>
+                    <span class="domain">({{ topic.link_domain }})</span>
+                {% else %}
+                    <a href="/{{ topic.id }}">{{ escape(topic.title) }}</a>
+                {% end %}
             </h2>
             <p class="comment_info">
                 {% if not current_user %}
