--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ html {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
     color: #3a3a3a;
-    line-height: 140%;
+    line-height: 1.5em;
 }
 
 body {
