--- a/static/style.css
+++ b/static/style.css
@@ -62,13 +62,18 @@ textarea {
     text-align: center;
 }
 #header #logo a {
-    border-radius: 7px;
     font-size: 5em;
     padding: 0.1em 0.6em;
     line-height: 1;
     text-decoration: none;
     background-color: #41A3C2;
     color: white;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    box-shadow: 0px 0px 40px #dddddd;
+    -webkit-box-shadow: 0px 0px 40px #dddddd;
+    -moz-box-shadow: 0px 0px 40px #dddddd;
 }
 
 #header #nav {
