--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -25,7 +25,7 @@
         <div id="message" class="error">Please check that your email is entered correctly.</div>
     {% elif message == 'user_exists' %}
         <div id="message" class="error">
-            You've already signed up with us. Please sign in <a href="/sign_in">here</a>.
+            You've already signed up. Please sign in <a href="/sign_in">here</a>.
         </div>
     {% end %}
     
