--- a/static/style.css
+++ b/static/style.css
@@ -74,6 +74,7 @@ textarea {
     box-shadow: 0px 0px 40px #dddddd;
     -webkit-box-shadow: 0px 0px 40px #dddddd;
     -moz-box-shadow: 0px 0px 40px #dddddd;
+    text-shadow: rgba(0, 0, 0, 0.15) 1px 1px 0px;
 }
 
 #header #nav {
