--- a/templates/topic.html
+++ b/templates/topic.html
@@ -21,10 +21,8 @@
 {% block style %}
     <style>
         .topic { padding-bottom: 3.5em; }
-        .topic .body { padding: 1em 0; }
-        #reply_box {
-            display: none;
-        }
+        .topic > .body { padding: 1em 0; }
+        #reply_box { display: none; }
         #reply_box textarea {
             width: 500px;
             height: 100px;
@@ -77,7 +75,11 @@
     </div>
     
     <div id="reply_box" class="comment">
-        <img src="http://www.gravatar.com/avatar/0?d=mm&amp;s=60" class="gravatar">
+        {% if current_user %}
+            <img src="{{ current_user.gravatar(60) }}" class="gravatar">
+        {% else %}
+            <img src="http://www.gravatar.com/avatar/0?d=mm&amp;s=60" class="gravatar">
+        {% end %}
         <div class="body">
             <form action="" method="post">
                 {{ xsrf_form_html() }}
