--- a/static/style.css
+++ b/static/style.css
@@ -114,6 +114,7 @@ textarea {
 .topic_listing { margin-bottom: 2em; }
 .topic_listing .domain {
     font-size: 0.8em;
+    font-weight: 200;
     color: #6d6c6c;
 }
 
