--- a/static/style.css
+++ b/static/style.css
@@ -2,16 +2,11 @@
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 
 
-html {
+body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
     color: #3a3a3a;
     line-height: 1.5em;
-}
-
-body {
-    margin: 4em auto;
-    width: 700px;
 }
 
 a { color: #41a3c2; }
@@ -53,6 +48,13 @@ textarea {
     left: 0px; 
     top: 0px; 
     z-index: -1;
+}
+#body {
+    padding: 4em 0;
+}
+#main {
+    margin: auto;
+    width: 700px;
 }
 
 #header {
