--- a/templates/community_edit.html
+++ b/templates/community_edit.html
@@ -16,8 +16,10 @@
     
     <h1>Community - Edit</h1>
     
-    <form action="" method="post">
+    <form action="{{ upload_url }}" method="post" enctype="multipart/form-data">
         {{ xsrf_form_html() }}
+        <input type="file" name="file">
+        <br>
         <label for="title">Title</label>
         <input type="text" id="title" name="title" value="{{ escape(current_site.title) }}">
         <label for="tagline">Tagline</label>
